Fixed align of network modal window

--- a/src/containers/app/scss/style.scss
+++ b/src/containers/app/scss/style.scss
@@ -55,7 +55,7 @@ input[type="number"] {
       position: relative;
       display: flex;
       flex-wrap: wrap;
-      padding: 120px 7.5px 15px;
+      padding: 135px 7.5px 15px;
       min-height: 100%;
       z-index: 0;
       @media(max-width: 760px) {
